Updated application.scss to fix spacing for the dividers added to items.html.erb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ body{
   flex-direction: column;
   justify-content: space-between;
 }
-
+$section-padding-medium: 3rem 1.5rem;
 $footer-color: true;
 $footer-background-color: #ffff;
 $footer-padding: 3rem 1.5rem 3rem;
